# xymontecarlo

./: CMakeLists.txt  README.md  heat.npz  pyproject.toml
.github/workflows/: wheels.yml
src/: main.cc  model.h
src/xymontecarlo/: __init__.py  makeplot.py  xymc.py
